// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified company does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get company by ID 1b111c1111ef11. Check that the company with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 92,
    \\"remainingRequestsPercentage\\": 92,
    \\"resetTimestamp\\": 1672411128
  }
}
AST Path: definitions[0].statements[1].statements[0]
Original Map Location: Line 13, column 5",
}
`;

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified job does exist when CV file name is missing returns CVFileNameRequired error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Missing CV file name\\",
  \\"detail\\": \\"CV file name is required.\\",
  \\"code\\": \\"CVFileNameRequired\\"
}
AST Path: definitions[0].statements[0].statements[0]
Original Map Location: Line 6, column 5",
}
`;

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified job does exist when unsupported CV file MIME type used returns CVMIMETypeNotSupported error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"CV MIME type not supported\\",
  \\"detail\\": \\"File type cv-sample.xml is not supported by Breezy HR provider.\\",
  \\"code\\": \\"CVMIMETypeNotSupported\\"
}
AST Path: definitions[0].statements[0].statements[0]
Original Map Location: Line 6, column 5",
}
`;

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified job does exist when valid inputs passed performs correctly 1`] = `
Ok {
  "value": Object {
    "id": "32004f13d65c01",
    "jobId": "701c3f2fc42a01",
    "rateLimit": Object {
      "bucket": "breezy-hr",
      "remainingRequests": 96,
      "remainingRequestsPercentage": 96,
      "resetTimestamp": 1672411128,
      "totalRequests": 100,
    },
  },
}
`;

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified job does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get job by ID 12345ab789d1dd. Check that the job with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 93,
    \\"remainingRequestsPercentage\\": 93,
    \\"resetTimestamp\\": 1672411128
  }
}
AST Path: definitions[0].statements[2].statements[0]
Original Map Location: Line 21, column 5",
}
`;

exports[`recruitment/create-candidate/breezy-hr CreateCandidateFeatures returns valid breezy-hr features 1`] = `
Ok {
  "value": Object {
    "cvMIMETypes": Array [
      "application/pdf",
    ],
    "cvUploadMethods": Array [
      "file",
    ],
  },
}
`;
